--- a/app/src/main/res/layout/activity_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_chi_tiet.xml
@@ -24,8 +24,10 @@
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_marginTop="10dp"
-        android:padding="3dp">
+        android:layout_margin="20dp"
+        android:padding="5dp">
 
     </ListView>
 
