--- a/app/src/main/res/layout/fragment_dangnhap.xml
+++ b/app/src/main/res/layout/fragment_dangnhap.xml
@@ -78,7 +78,7 @@
 
             <Button
                 android:layout_centerInParent="true"
-                android:layout_below="@+id/btnxacnhan"
+                android:layout_below="@+id/btndangnhap"
                 android:textAllCaps="false"
                 android:id="@+id/btndangki"
                 android:layout_marginTop="30dp"
