--- a/app/src/main/res/layout/fragment_trangchu.xml
+++ b/app/src/main/res/layout/fragment_trangchu.xml
@@ -24,6 +24,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ic_search"/>
 
+    <ScrollView
+        android:layout_below="@+id/btnSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
 
         android:layout_width="match_parent"
@@ -286,6 +290,7 @@
         </LinearLayout>
 
     </LinearLayout>
+    </ScrollView>
 
 <TableLayout
     android:layout_width="match_parent"
