--- a/app/src/main/res/layout/update_thong_tin.xml
+++ b/app/src/main/res/layout/update_thong_tin.xml
@@ -70,7 +70,7 @@
         android:layout_marginTop="5dp"
         android:textSize="22dp" />
 
-    <EditText
+    <TextView
 
         android:id="@+id/edtdate"
         android:textStyle="bold"
@@ -97,6 +97,7 @@
         />
 
     <Button
+        android:id="@+id/btnUpdate"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:text="Update"
