--- a/app/src/main/res/layout/activity_main_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_main_ca_nhan.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,6 +12,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="22dp"
+        android:src="@android:drawable/ic_menu_upload"/>
     <TableLayout
         android:id="@+id/Table"
         android:layout_marginTop="20dp"
@@ -19,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/anhDaiDien"
         android:orientation="horizontal"
+        android:stretchColumns="1"
         android:padding="40dp">
         <TableRow
             android:id="@+id/row1"
@@ -34,14 +45,13 @@
             <TextView
 
                 android:id="@+id/ViewHoTen"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:textSize="25sp"
+                android:textStyle="italic"/>
         </TableRow>
         <TableRow
             android:id="@+id/row2"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="3000dp">
+            android:layout_marginTop="10dp">
             <TextView android:id="@+id/View2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -49,14 +59,13 @@
                 android:textSize="25sp"
                 android:textStyle="italic"/>
             <TextView android:id="@+id/ViewNgaySinh"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"/>
+
+                android:layout_height="match_parent"
+                android:textSize="25sp"/>
         </TableRow>
         <TableRow
             android:id="@+id/row3"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="3000dp">
+            android:layout_marginTop="10dp">
             <TextView android:id="@+id/View3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -64,7 +73,7 @@
                 android:textSize="25sp"
                 android:textStyle="italic"/>
             <TextView android:id="@+id/ViewGioiTinh"
-                android:layout_width="200dp"
+                android:textSize="25sp"
                 android:layout_height="match_parent"/>
         </TableRow>
     </TableLayout>
