--- a/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+    <RelativeLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
@@ -42,23 +47,24 @@
             android:textStyle="italic"
             android:text="@string/Thongtin"
             android:textSize="20dp"/>
+
         <ScrollView
             android:id="@+id/iconScoll"
             android:layout_below="@+id/ttvThongTin"
             android:layout_width="match_parent"
             android:layout_height="110dp">
 
-        <TextView
-            android:id="@+id/ThongTin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ttvThongTin"
-            android:layout_alignParentStart="true"
-            android:textStyle="italic"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:text=""
-            />
+            <TextView
+                android:id="@+id/ThongTin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ttvThongTin"
+                android:layout_alignParentStart="true"
+                android:textStyle="italic"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:text=""
+                />
         </ScrollView>
 
         <TextView
@@ -115,12 +121,48 @@
             android:id="@+id/lvNhanXet"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/table"
-            android:layout_below="@+id/btnNhanXet"></ListView>
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="30dp"
+            android:layout_below="@+id/btnNhanXet">
+
+        </ListView>
+
+        <!-- map tai dia diem do -->
+        <fragment
+            android:id="@+id/myMap"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="4dp"
+            android:layout_below="@+id/lvNhanXet"
+            android:layout_height="200dp">
+
+        </fragment>
+        <!-- danh sach thoi tiet cho nguoi dung -->
+        <HorizontalScrollView
+            android:id="@+id/horizontal_weather"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="3dp"
+            android:layout_below="@+id/myMap"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/viewWeather"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
 
         <TableLayout
             android:id="@+id/table"
             android:layout_alignParentBottom="true"
+            android:layout_below="@+id/horizontal_weather"
             android:layout_marginBottom="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -157,6 +199,6 @@
             </TableRow>
         </TableLayout>
 
-
     </RelativeLayout>
+</ScrollView>
 
