cập nhật Map! add giao diện map! tìm vị trí hiện tại, vs tìm kiếm địa điểm hiển thị AutoCompleteView của thanh search Map

--- a/app/src/main/res/layout/activity_map_api.xml
+++ b/app/src/main/res/layout/activity_map_api.xml
@@ -1,17 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    >
 
     <fragment
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/myMap"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
+        tools:context=".Map_api"
         android:layout_height="match_parent">
 
     </fragment>
+    <RelativeLayout
+        android:id="@+id/relative1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:elevation="10dp"
+        android:background="@drawable/white_border">
+        
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:id="@+id/buttonSearchMap"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_search"/>
+        
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/buttonSearchMap"
+            android:layout_centerVertical="true"
+            android:textSize="15sp"
+            android:textColor="#000"
+            android:id="@+id/edittextSearch"
+            android:background="@null"
+            android:hint="Nhập địa điểm"
+            android:imeOptions="actionSearch"/>
+    </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageviewGPS"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/relative1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_gps"/>
+
+</RelativeLayout>
