--- a/app/src/main/res/layout/fragment_trangchu.xml
+++ b/app/src/main/res/layout/fragment_trangchu.xml
@@ -285,12 +285,42 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-
         </LinearLayout>
 
+        <fragment
+            android:id="@+id/myMap"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
+        </fragment>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <Button
+        android:id="@+id/buttonXemThem"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="xem thêm."
+        android:layout_marginRight="15dp"
+        android:layout_alignParentRight="true"
+        android:background="@color/white"/>
+
+        <HorizontalScrollView
+            android:layout_below="@+id/buttonXemThem"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+            <LinearLayout
+                android:id="@+id/horizontal_XuHuong"
+                android:layout_width="200dp"
+                android:layout_height="300dp"
+                android:orientation="horizontal">
+            </LinearLayout>
+        </HorizontalScrollView>
+
+</RelativeLayout>
     </LinearLayout>
-
-
     </ScrollView>
 
 <TableLayout
