--- a/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dip" >
+                android:padding="10dp" >
             </LinearLayout>
 
 
@@ -48,30 +48,23 @@
             android:text="@string/Thongtin"
             android:textSize="20dp"/>
 
-        <ScrollView
-            android:id="@+id/iconScoll"
-            android:layout_below="@+id/ttvThongTin"
+        <TextView
+            android:id="@+id/ThongTin"
             android:layout_width="match_parent"
-            android:layout_height="110dp">
-
-            <TextView
-                android:id="@+id/ThongTin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/ttvThongTin"
-                android:layout_alignParentStart="true"
-                android:textStyle="italic"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                android:text=""
-                />
-        </ScrollView>
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ttvThongTin"
+            android:layout_alignParentStart="true"
+            android:textStyle="italic"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:text=""
+            />
 
         <TextView
             android:id="@+id/DanhGiaSao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/iconScoll"
+            android:layout_below="@+id/ThongTin"
             android:layout_centerHorizontal="true"
             android:text="@string/Danhgia"
             android:textStyle="italic"
@@ -99,22 +92,23 @@
 
         <EditText
             android:id="@+id/NhanXet"
-            android:layout_width="295dp"
+            android:layout_width="match_parent"
             android:layout_height="33dp"
+            android:layout_toRightOf="@+id/ttvNhanXet"
             android:layout_below="@+id/ratingBar1"
-            android:layout_alignStart="@+id/ratingBar1"
-            android:layout_marginStart="14dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:ems="10" />
 
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btnNhanXet"
-            android:layout_centerInParent="true"
-            android:layout_width="100dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
             android:layout_marginTop="5dp"
             android:clickable="true"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/NhanXet"
+            android:layout_below="@+id/ttvNhanXet"
             android:src="@android:drawable/ic_menu_upload"/>
 
         <ListView
@@ -129,17 +123,27 @@
         </ListView>
 
         <!-- map tai dia diem do -->
-        <fragment
-            android:id="@+id/myMap"
-            android:name="com.google.android.gms.maps.MapFragment"
+        <RelativeLayout
+            android:id="@+id/relativeMap"
             android:layout_width="match_parent"
+            android:layout_height="200dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:layout_below="@+id/lvNhanXet">
+        <fragment
+            android:id="@+id/myMap_DiaDiem"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
             android:layout_marginTop="4dp"
-            android:layout_below="@+id/lvNhanXet"
             android:layout_height="200dp">
-
         </fragment>
+            <TextView
+                android:id="@+id/txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:text="Thong tin ve dia diem."/>
+        </RelativeLayout>
         <!-- danh sach thoi tiet cho nguoi dung -->
         <HorizontalScrollView
             android:id="@+id/horizontal_weather"
@@ -147,7 +151,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="3dp"
-            android:layout_below="@+id/myMap"
+            android:layout_below="@+id/relativeMap"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:id="@+id/viewWeather"
