--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,10 @@
         <item name="colorControlActivated">#fffefe</item>
     </style>
 
+    <style name="styleStar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/my_star</item>
+        <item name="android:minHeight">24dip</item>
+        <item name="android:maxHeight">24dip</item>
+    </style>
+
 </resources>
