--- a/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<RelativeLayout android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
@@ -114,12 +122,11 @@
         <ListView
             android:id="@+id/lvNhanXet"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="30dp"
             android:layout_below="@+id/btnNhanXet">
-
         </ListView>
 
         <!-- map tai dia diem do -->
@@ -173,24 +180,6 @@
             android:gravity="center"
             android:stretchColumns="0,1,2">
             <TableRow>
-                <Button
-                    android:id="@+id/HienThiDiaDiem"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_margin="10dp"
-                    android:text="@string/Hienthidiadiem" />
-
-                <Button
-                    android:id="@+id/ThoiTiet"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_alignTop="@+id/HienThiDiaDiem"
-                    android:layout_alignParentEnd="true"
-                    android:text="@string/Thoitiet" />
-
                 <Spinner
                     android:id="@+id/DichVu"
                     android:layout_toLeftOf="@id/ThoiTiet"
@@ -205,4 +194,37 @@
 
     </RelativeLayout>
 </ScrollView>
+    <com.github.clans.fab.FloatingActionMenu
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@android:color/transparent"
+        android:layout_margin="16dp"
+        app:menu_openDirection="up"
+        app:menu_showShadow="true"
+        app:menu_fab_label=""
+        app:menu_labels_textColor="@color/colortext"
+        app:menu_labels_colorNormal="@color/white"
+        app:menu_labels_colorPressed="@color/colorbackgroundbutton">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/floatingactionbuttonDangNhap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_dangnhap"
+            app:fabSize="mini"
+            app:fab_label="Đăng Nhập"
+            />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/floatingactionbuttonMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_map"
+            app:fabSize="mini"
+            app:fab_label="Map"
+            />
+    </com.github.clans.fab.FloatingActionMenu>
+
+</RelativeLayout>
 
