--- a/app/src/main/res/layout/itemhorizontal_xuhuong.xml
+++ b/app/src/main/res/layout/itemhorizontal_xuhuong.xml
@@ -9,6 +9,7 @@
         >
 
         <LinearLayout
+            android:layout_marginLeft="3dp"
             android:layout_width="200dp"
             android:layout_height="300dp"
             android:orientation="vertical">
@@ -25,6 +26,14 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:text="ten dia diem"/>
+            <RatingBar
+                android:id="@+id/numStar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="2"
+                style="@style/styleStar"
+                android:layout_gravity="center"/>
             <TextView
                 android:id="@+id/textview_loaidulich"
                 android:layout_width="wrap_content"
