--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,13 @@
     <color name="white">#ffffff</color>
     <color name="colorAccent">#FF4081</color>
     <color name="darkgray">#6c6c6c</color>
-    <color name="colortext">#0c08f2</color>
+    <color name="colortext">#212121</color>
     <color name="colorbackgroundtext">#c5d4d2</color>
     <color name="backgroundimageview">#7b717c</color>
     <color name="colorstar">#ffe100</color>
     <color name="colortextdialog">#0445f5</color>
-
     <color name="colorbackgroundbutton">#fc0298</color>
+
+
+
 </resources>
