--- a/app/src/main/res/layout/item_listview.xml
+++ b/app/src/main/res/layout/item_listview.xml
@@ -32,17 +32,18 @@
                 android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content"
                 android:text="ten tinh thanh"
+                android:layout_gravity="center"
                 android:textSize="22sp"/>
-
 
             <TextView
                 android:id="@+id/txtThongTin"
                 android:text="thong tin co ban ve noi se den."
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="10dp"
+                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textSize="22sp"/>
+                android:textSize="16sp"/>
 
         </LinearLayout>
     </LinearLayout>
