--- a/app/src/main/res/layout/itemhorizontal_xuhuong.xml
+++ b/app/src/main/res/layout/itemhorizontal_xuhuong.xml
@@ -5,9 +5,7 @@
     android:layout_height="match_parent">
     <android.support.v7.widget.CardView
         android:layout_width="200dp"
-        android:layout_height="300dp"
-        >
-
+        android:layout_height="300dp">
         <LinearLayout
             android:layout_marginLeft="3dp"
             android:layout_width="200dp"
@@ -26,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:text="ten dia diem"/>
+
             <RatingBar
                 android:id="@+id/numStar"
                 android:layout_width="wrap_content"
