--- a/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_dia_diem_chi_tiet.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="4dp"
+    android:id="@+id/layoutMain"
     android:layout_marginRight="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -195,6 +196,7 @@
     </RelativeLayout>
 </ScrollView>
     <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/floattinhacctionMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
