--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="colortextdialog">#0445f5</color>
     <color name="colorbackgroundbutton">#fc0298</color>
 
+    <!-- color button -->
+    <color name="background_buton">#4CAF50</color>
 
 
 </resources>
