--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -14,7 +14,6 @@
         android:layout_height="56dp"
         android:text="@string/gioithieu"
         android:textAlignment="center"
-        android:layout_marginTop="100dp"
         android:textColor="#566117"
         android:textSize="22sp"
 
@@ -54,33 +53,26 @@
             android:layout_width="match_parent"
             android:inputType="textPassword"
             android:hint="Nhập Password"
-            android:layout_height="wrap_content" /><requestFocus/>
+            android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
-        <Button
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="30dp"
-            android:textAllCaps="false"
-            android:id="@+id/btndangnhap"
-            android:layout_below="@+id/passLayout"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:layout_centerInParent="true"
-            android:background="@color/colorbackgroundbutton"
-            android:text="@string/xacnhan" />
-
-            <Button
-                android:layout_centerInParent="true"
-                android:layout_below="@+id/btndangnhap"
-                android:textAllCaps="false"
-                android:id="@+id/btndangki"
-                android:layout_marginTop="30dp"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="33dp"
-                android:textSize="30sp"
-                android:background="@color/colorbackgroundbutton"
-                android:text="@string/dangki" />
-
-
+    <Button
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="30dp"
+        android:textAllCaps="false"
+        android:id="@+id/btndangnhap"
+        android:layout_below="@+id/passLayout"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="30dp"
+        android:background="@color/colorbackgroundbutton"
+        android:text="@string/xacnhan" />
+    <!---->
+    <!--<android.support.v7.widget.AppCompatButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Login Buttn"-->
+        <!--android:id="@+id/buttonLogin"-->
+        <!--style="@style/Button1"/>-->
 </RelativeLayout>
